fixing annotation processor depending on resources